[gd_scene load_steps=8 format=3 uid="uid://3djkd1p6sgeq"]

[ext_resource type="Theme" uid="uid://bmaaet3opnwik" path="res://ui/themes/bluesea.tres" id="1_3ieb5"]
[ext_resource type="Script" path="res://menus/Menu.gd" id="1_wyn5u"]
[ext_resource type="Texture2D" uid="uid://d1jikquhwd06x" path="res://assets/main_menu/logo2.png" id="2_6aj56"]
[ext_resource type="Shader" path="res://shaders/wave.gdshader" id="2_pv700"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ujf4w"]
shader = ExtResource("2_pv700")
shader_parameter/WATER_COL = Color(0.176471, 0.635294, 0.85098, 1)
shader_parameter/WATER2_COL = Color(0.0588235, 0.529412, 0.776471, 1)
shader_parameter/FOAM_COL = Color(0.87451, 0.988235, 1, 1)
shader_parameter/distortion_speed = 2.0
shader_parameter/tile = Vector2(5, 5)
shader_parameter/offset = Vector2(0, 0)

[sub_resource type="Gradient" id="Gradient_j0kme"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_gx2ju"]
gradient = SubResource("Gradient_j0kme")

[node name="Titltlescreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme = ExtResource("1_3ieb5")
script = ExtResource("1_wyn5u")

[node name="wave" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_ujf4w")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_gx2ju")

[node name="Menu" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 64
alignment = 1

[node name="Logo" type="TextureRect" parent="Menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
texture = ExtResource("2_6aj56")
expand_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_3ieb5")
theme_override_constants/separation = 8

[node name="Start game" type="Button" parent="Menu/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
text = "Start game"

[node name="Search" type="Button" parent="Menu/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Search"

[node name="Options" type="Button" parent="Menu/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
text = "Options"

[node name="Exit" type="Button" parent="Menu/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
text = "Exit"

[node name="HSeparator" type="HSeparator" parent="Menu/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Options" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.00868
anchor_right = 2.00868
anchor_bottom = 1.0
offset_left = -1.52588e-05
offset_right = -1.52588e-05
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="BackContainer" type="MarginContainer" parent="Options"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20

[node name="Back" type="Button" parent="Options/BackContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
text = "Back
"

[node name="ControlsContainer" type="MarginContainer" parent="Options"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Panel" type="Panel" parent="Options/ControlsContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Options/ControlsContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Options/ControlsContainer/MarginContainer"]
custom_minimum_size = Vector2(460, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Name" type="Label" parent="Options/ControlsContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Player name"

[node name="Name_line" type="LineEdit" parent="Options/ControlsContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HOST" type="Label" parent="Options/ControlsContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Server host address"

[node name="Host_line" type="LineEdit" parent="Options/ControlsContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="port" type="Label" parent="Options/ControlsContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Server host port
"

[node name="Port_line" type="LineEdit" parent="Options/ControlsContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="Menu/VBoxContainer/VBoxContainer/Start game" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/VBoxContainer/Search" to="." method="_on_search_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Options/BackContainer/Back" to="." method="_on_back_pressed"]
[connection signal="text_changed" from="Options/ControlsContainer/MarginContainer/VBoxContainer/Name_line" to="." method="_on_name_line_text_changed"]
[connection signal="text_changed" from="Options/ControlsContainer/MarginContainer/VBoxContainer/Host_line" to="." method="_on_host_line_text_changed"]
[connection signal="text_changed" from="Options/ControlsContainer/MarginContainer/VBoxContainer/Port_line" to="." method="_on_port_line_2_text_changed"]
